--- a/_posts/2016-07-24-trinket.md
+++ b/_posts/2016-07-24-trinket.md
@@ -4,16 +4,27 @@ title:      "Trinket"
 subtitle:   "Hole in the wall."
 date:       2016-07-24 12:23:00
 author:     "Alex"
-header-img: "img/2016-07-24-trinket/alex.jpg"
+header-img: "img/2016-07-24-trinket/header.jpg"
 
 #other info
 location:   Trinket
 price:      $
 ---
+
+[img1]: img/2016-07-24-trinket/1.jpg
+[img2]: img/2016-07-24-trinket/2.jpg
+[img3]: img/2016-07-24-trinket/3.jpg
+
 I woke up this morning in my Southeast Portland bed and immediately opened up my own Portland breakfast to-do list to see where I should go next. I settled with a place called Trinket on the corner of SE Lincoln and Cesar Chavez nestled between an independent bicycle shop and a hair salon. Trinket is only open until the early afternoon so I got the feeling that they knew what they were doing when it come to breakfast.
+
+![img3]
 
 Just after 10:30 I sat down in a creaky wooden chair at a table for one, greeted by a smile, a glass bottle of water and a steamy mug of coffee. The modest menu stared back at me, presenting me with the morning’s best problem. Approaching a menu like this with an open mind sets you up with the best chances for breakfast triumph. A quick debriefing with the waitress revealed that all of the meats serves at Trinket are made in house, quickly drawing me away the sweet waffle option or the avocado toast and toward a menu items featuring braised pork shoulder. I settled on the polenta plus a seasonal fruit plate and was not disappointed.
 
 After about a half a cup of coffee the waitress delivered with my breakfast. A lagoon of polenta surrounded by sautéed kale and mushrooms topped with two over easy eggs. I quickly had to remind myself not to judge a book by its cover and dig in to what initially appeared to be a vegetarian dream.  Pulling back the veil of kale revealed an unexpected stash of fall-apart-tender pineapple braised pork shoulder. Jackpot.  Mopping up a bite of the egg, pork, kale and polenta created a perfectly balanced quartet of breakfast food. Any one of the components on their own made for a harsh bite. The pork was awfully salty, the kale was pretty bitter, and polenta was ordinary but together they made such sweet music. Surprisingly I was left wishing that I had a little less pork and a bit more polenta to even out the ratios of the dish. Creamy polenta balanced out the pork and kale while the eggs supplied a vital breakfast feeling.  Not to mention the fruit plate featuring the best the Pacific Northwest has to offer at this time of year, rounding out the entire dish. Kudos to Trinket for this one.
 
+![img1]
+
 Definitely a place I can see myself coming back to, which is high praise in my book. In a city with so many good breakfast options it only makes sense to go back to a place if it really offers something unique. The vibe at Trinket was anything but pretentious and their dedication to strictly breakfast and brunch garners a lot of respect from me. It’s much more valuable to do a few things very well as opposed to half-assing a bunch of things. House made pastries and meats, a concise but diverse menu and a levelheaded vibe will have me back at Trinket when I am in need of a breakfast I can rely on.
+
+!{img2}
