--- a/_drafts/2016-06-26-fried-egg.md
+++ b/_drafts/2016-06-26-fried-egg.md
@@ -10,3 +10,5 @@ header-img: "img/2016-06-26-fried-egg/header.jpg"
 location:   ""
 price:      ""
 ---
+
+Yay, expensive egg sandwiches.  That are really good.
