--- a/_posts/2016-07-24-trinket.md
+++ b/_posts/2016-07-24-trinket.md
@@ -11,9 +11,9 @@ location:   Trinket
 price:      $
 ---
 
-[img1]: img/2016-07-24-trinket/1.jpg
-[img2]: img/2016-07-24-trinket/2.jpg
-[img3]: img/2016-07-24-trinket/3.jpg
+[img1]: /img/2016-07-24-trinket/1.jpg
+[img2]: /img/2016-07-24-trinket/2.jpg
+[img3]: /img/2016-07-24-trinket/3.jpg
 
 I woke up this morning in my Southeast Portland bed and immediately opened up my own Portland breakfast to-do list to see where I should go next. I settled with a place called Trinket on the corner of SE Lincoln and Cesar Chavez nestled between an independent bicycle shop and a hair salon. Trinket is only open until the early afternoon so I got the feeling that they knew what they were doing when it come to breakfast.
 
@@ -27,4 +27,4 @@ After about a half a cup of coffee the waitress delivered with my breakfast. A l
 
 Definitely a place I can see myself coming back to, which is high praise in my book. In a city with so many good breakfast options it only makes sense to go back to a place if it really offers something unique. The vibe at Trinket was anything but pretentious and their dedication to strictly breakfast and brunch garners a lot of respect from me. It’s much more valuable to do a few things very well as opposed to half-assing a bunch of things. House made pastries and meats, a concise but diverse menu and a levelheaded vibe will have me back at Trinket when I am in need of a breakfast I can rely on.
 
-!{img2}
+![img2]
