--- a/_posts/2016-07-24-trinket.md
+++ b/_posts/2016-07-24-trinket.md
@@ -4,16 +4,16 @@ title:      "Trinket"
 subtitle:   "Hole in the wall."
 date:       2016-07-24 12:23:00
 author:     "Alex"
-header-img: "img/2016-07-24-trinket/header.jpg"
+header-img: "img/2016-07-24-trinket/header.JPG"
 
 #other info
 location:   Trinket
 price:      $
 ---
 
-[img1]: /img/2016-07-24-trinket/1.jpg
-[img2]: /img/2016-07-24-trinket/2.jpg
-[img3]: /img/2016-07-24-trinket/3.jpg
+[img1]: /img/2016-07-24-trinket/1.JPG
+[img2]: /img/2016-07-24-trinket/2.JPG
+[img3]: /img/2016-07-24-trinket/3.JPG
 
 I woke up this morning in my Southeast Portland bed and immediately opened up my own Portland breakfast to-do list to see where I should go next. I settled with a place called Trinket on the corner of SE Lincoln and Cesar Chavez nestled between an independent bicycle shop and a hair salon. Trinket is only open until the early afternoon so I got the feeling that they knew what they were doing when it come to breakfast.
 
